Correct answer popup no longer jumps

--- a/src/containers/Quiz/Quiz.scss
+++ b/src/containers/Quiz/Quiz.scss
@@ -35,9 +35,13 @@
     opacity: 1;
     transform: translate(-50%, -50%) rotate(10deg) scale(1);
   }
-  100% {
+  90% {
     opacity: 1;
     transform: translate(-50%, -50%) rotate(-10deg) scale(1);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%) rotate(0deg) scale(1);
   }
 }
 
@@ -68,6 +72,7 @@
     visibility: visible;
     animation-name: stamp;
     animation-duration: 1000ms;
+    animation-fill-mode: forwards;
     animation-iteration-count: 1;
     animation-timing-function: linear;
   }
@@ -97,6 +102,7 @@
     visibility: visible;
     animation-name: pulse;
     animation-duration: 300ms;
+    animation-fill-mode: forwards;
     animation-iteration-count: 4;
     animation-direction: alternate;
     animation-timing-function: linear;
